fixing right side nav on mobile view

--- a/assets/scss/_sidebar.scss
+++ b/assets/scss/_sidebar.scss
@@ -1,10 +1,10 @@
 #sidebar-right,
 #sidebar-left {
-  height: calc(100vh - var(--header-height));
   overflow-y: auto;
 }
 
 #sidebar-left {
+  height: calc(100vh - var(--header-height));
   box-shadow: 3px 3px 5px 0px var(--light-mid);
   position: sticky;
   top: var(--header-height);
@@ -27,15 +27,18 @@
   }
 }
 
-#sidebar-right {
-  position: fixed;
+@media screen and (min-width: 768px) {
+  #sidebar-right {
+    position: fixed;
+    height: calc(100vh - var(--header-height));
 
-  &:before {
-    background-color: var(--light-mid);
-    content: '';
-    height: 200px;
-    left: 0;
-    top: 1rem;
-    width: 1px;
+    &:before {
+      background-color: var(--light-mid);
+      content: '';
+      height: 200px;
+      left: 0;
+      top: 1rem;
+      width: 1px;
+    }
   }
 }
